# rules_d

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  _typos.toml  dub.selections.json  dub.selections.lock.json  renovate.json
.bcr/: metadata.template.json
.github/workflows/: bazel-v7.2.2-patched.yaml  ci.yaml  conventional-commits.yaml  publish.yaml  release.yaml  release_prep.sh  tag.yaml
d/: BUILD  BUILD.bazel  d.bzl  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
d/private/: BUILD.bazel  BUILD.dmd_toolchain.bazel  BUILD.ldc_toolchain.bazel  common.bzl  d.bzl  d_toolchain.bzl  dc.bzl  defs.bzl  extensions.bzl  known_compiler_releases.bzl  providers.bzl  repositories.bzl  toolchains.bzl
d/private/rules/: BUILD.bazel  binary.bzl  common.bzl  compile.bzl  library.bzl  link.bzl  proto.bzl  test.bzl
d/private/sdk/: BUILD.dmd.bazel  BUILD.ldc.bazel  versions.bzl
d/private/sdk/versions_generator/: generate_versions_bzl.py
d/tests/proto/: BUILD.bazel  addressbook.proto  common.proto  usage.d
d/tests/simple_c_library/: BUILD.bazel
docs/: rules.md
dub/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl
dub/private/: BUILD.bazel  BUILD.dub_tool.bazel  curl_downloader.d  dub_tool.bzl  packages.bzl  versions.bzl
dub/private/selections_lock/: BUILD.bazel  dub_selections_lock_json.d  selections_lock.bzl
dub/selections_lock/: BUILD.bazel  build_file_generator.d  build_file_generator_test.d  generate_build_file.d  generate_selections_lock.d  model.d  selections_lock.bzl  selections_lock.d  selections_lock_generator.d  selections_lock_generator_test.d
dub/tests/no_transitive_deps/: BUILD.bazel  no_transitive_deps.d
e2e/smoke/: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  dub.selections.extra.json  dub.selections.json  dub.selections.lock.json
e2e/smoke/tests/proto/: BUILD.bazel  usage.d
e2e/smoke/tests/transitive_deps/: BUILD.bazel
examples/c_library_usage/: BUILD.bazel
examples/c_library_usage_no_wrapper/: BUILD.bazel
examples/d_library_usage/: BUILD.bazel
examples/directory_srcs/: directory_generator.bzl
examples/fiber_thread_usage/: BUILD.bazel
examples/hello_lib/: BUILD  BUILD.bazel
examples/hello_world/: BUILD.bazel
examples/lib_that_depends_on_lib_test/: BUILD.bazel
examples/simple_c_library/: BUILD.bazel
tests/c_library_usage/: BUILD  BUILD.bazel
tests/c_library_usage_no_wrapper/: BUILD  BUILD.bazel
tests/d_library_usage/: BUILD  BUILD.bazel
tests/directory_srcs/: BUILD.bazel
tests/fiber_thread_usage/: BUILD
tests/lib_that_depends_on_lib/: BUILD.bazel
tests/simple/: BUILD
tests/simple_as_binary/: BUILD  BUILD.bazel
tests/simple_c_library/: BUILD.bazel
tests/simple_d_library/: BUILD.bazel
tests/simplest/: BUILD
tools/: BUILD.bazel  curl_downloader.d  d_tool.bzl  generate_compiler_versions_bzl.d  tool_runner.bzl
utils/: get_compiler_releases.py  sha256.txt
