load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@bazelrc-preset.bzl", "bazelrc_preset")
load("@rules_d//d:defs.bzl", "d_binary")

bazelrc_preset(
    name = "preset",
    doc_link_template = "https://registry.build/flag/bazel?filter={flag}",
    strict = True,
    tags = ["manual"],
)

# gazelle:map_kind bzl_library bzl_library @bazel_lib//:bzl_library.bzl
gazelle_binary(
    name = "gazelle_bin",
    languages = ["@bazel_skylib_gazelle_plugin//bzl"],
)

gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)

d_binary(
    name = "generate_compiler_versions_bzl",
    srcs = [
        "generate_compiler_versions_bzl.d",
    ],
    deps = ["//dub/private:d_utils"],
)
