load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "dub_tool",
    srcs = ["dub_tool.bzl"],
    visibility = ["//dub:__subpackages__"],
    deps = [":versions"],
)

bzl_library(
    name = "packages",
    srcs = ["packages.bzl"],
    visibility = ["//dub:__subpackages__"],
    deps = ["@bazel_skylib//lib:paths"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//dub:__subpackages__"],
)
