load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_d//d:defs.bzl", "d_binary")

d_binary(
    name = "generate_selections_lock",
    srcs = ["generate_selections_lock.d"],
    data = ["//d:dub"],
    env = {
        "DUB": "$(location //d:dub)",
    },
    visibility = ["//visibility:public"],
    deps = ["//dub/private:d_utils"],
)

bzl_library(
    name = "selections_lock",
    srcs = ["selections_lock.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_lib//lib:run_binary",
        "@bazel_lib//lib:utils",
        "@bazel_lib//lib:write_source_files",
    ],
)

build_test(
    name = "generate_selections_lock_test",
    targets = [":generate_selections_lock"],
)
