bazel_dep(name = "rules_d", version = "0.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

local_path_override(
    module_name = "rules_d",
    path = "../..",
)

dub = use_extension("@rules_d//dub:extensions.bzl", "dub")
dub.from_dub_selections(
    dub_selections_lock = "//:dub.selections.lock.json",
)
use_repo(dub, "dub")
