load("//d:defs.bzl", "d_library", "d_test")

package(default_visibility = ["//visibility:public"])

d_library(
    name = "greeter",
    srcs = ["greeter.d"],
)

d_test(
    name = "greeter_test",
    srcs = ["greeter_test.d"],
    deps = [":greeter"],
)

cc_library(
    name = "native_greeter_lib",
    srcs = ["native-greeter.c"],
    hdrs = ["native-greeter.h"],
)

filegroup(
    name = "native_greeter",
    srcs = ["native_greeter.d"],
)
