load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_d//d:defs.bzl", "d_library", "d_test")

package(default_visibility = ["//visibility:public"])

d_library(
    name = "greeter",
    srcs = ["greeter.d"],
)

d_test(
    name = "greeter_test",
    srcs = ["greeter_test.d"],
    deps = [":greeter"],
)

cc_library(
    name = "native_greeter_lib",
    srcs = ["native-greeter.c"],
    hdrs = ["native-greeter.h"],
)

d_library(
    name = "native_greeter",
    srcs = ["native_greeter.d"],
    source_only = True,
    deps = [":native_greeter_lib"],
)
